k8s/nfty/manifests/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: production-external-apps
spec:
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      nodeSelector:
        node.kubernetes.io/worker: 'true'
        topology.kubernetes.io/region: 'sg-prod-01'
      containers:
      - name: ntfy
        image: binwiederhier/ntfy
        args: ["serve"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: config
          mountPath: "/etc/ntfy"
          readOnly: true
        - name: cache
          mountPath: "/var/cache/ntfy"
      volumes:
        - name: config
          configMap:
            name: ntfy-cfm
        - name: cache
          persistentVolumeClaim:
            claimName: ntfy-cache-pvc
---
# Basic service for port 80
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc
  namespace: production-external-apps
spec:
  selector:
    app: ntfy
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-ingress
  namespace: production-external-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`noty.mcb-svc.work`)
      kind: Rule
      services:
        - name: ntfy-svc
          port: 80
          scheme: http
  tls:
    secretName: production-external-app-cert-tls
